infrastructure/kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: finai-service
spec:
  type: ClusterIP
  selector:
    app: finai
  ports:
    - port: 80
      targetPort: 3000
