infrastructure/kubernetes/finai-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: finai-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - finaiweb.online
      secretName: finai-tls

  rules:
    - host: finaiweb.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: finai-service
                port:
                  number: 80
